--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         </div>
         <button id="start-game-btn" class="btn btn-success mt-4">Start Game</button>
         <button id="logout-btn" class="btn btn-secondary ml-2">Logout</button>
+		<button onclick="window.location.href='ChessBot.html'">play vs bot</button>
     </div>
 
     <!-- Waiting Screen -->
